--- a/gb/news2007_4.md
+++ b/gb/news2007_4.md
@@ -30,7 +30,7 @@
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/3/n11765963.md#1" target="_blank">新诗：遇见刺梅</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/3/n11765963.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1501734_561830453911409_1653676144_n-150x120.jpg" align ="left"></a> 一直等到年关近了 才在霜冷寒冬遇见晕红双颊的你 盛装翩翩，舞出冬日的深邃......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 10:28 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/15/1/15/n4343055.md#1" target="_blank">士为知己者死 古人交友重义胜于生命</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/15/1/15/n4343055.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/01/Boya-150x120.jpg" align ="left"></a>古人云：“ 千金易得，知己难求。”“士为知己者死”、“知遇之恩”、“海内存知己，天涯若比邻”。古人非常重视朋友的交往，人生能得一知己死而无憾。管仲得到鲍叔牙的识拔而为齐国宰相；伯牙与钟子期一曲高山流水而相知；豫让为报智伯知遇之恩多次刺杀赵襄子没成功，后自杀。古人对知己的看重，远在金钱名利之上，甚至超过了生命。诸如此类的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 5:51 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/24/n11743506.md#1" target="_blank">孔子后悔的事：以言取人，以貌取人</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/24/n11743506.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/eec3c05064e2e2167d6119df777cfb7c-150x120.jpg" align ="left"></a>常言道：“人非圣贤，孰能无过？”历代天子士人所敬重的孔子，晚年时曾对二件事感到懊悔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 5:44 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/6/n11772770.md#1" target="_blank">诗歌：咏雪二首</a><br></h3> 一 玉殿琼楼下九重， 千树梨花舞寒风。 谁说严冬欠佳色， 银装素裹也怡情！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 12:34 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/3/n11764851.md#1" target="_blank">再走一趟中华路</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/3/n11764851.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/04/150413140609836-150x120.jpg" align ="left"></a>中华商场初建和繁盛时期，出现的各地小吃，都保持各自特殊的地方风味，其中涵隐着载不动的沉重乡愁。这是近几十年台湾饮食发展，非常重要的转折。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 2:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/6/n11772696.md#1" target="_blank">童诗：破了一个洞</a><br></h3>啵！爸爸的外套破了一个洞
 用针缝一缝 
 心破了洞，可以补起来吗?......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 11:24 PM			</td></tr>
