--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -26,6 +26,10 @@
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747254.md#1" target="_blank">川普其人在出生盘中的性格和命运</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747254.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-802018328-150x120.jpg" align ="left"></a>唐纳德?川普（Donald Trump）于1946年6月14日上午10时54分出生于纽约。这个时间绝对准确，因为它来自川普本人的出生证明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 3:14 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11790521.md#1" target="_blank">许其正：海鸥三唱</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11790521.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/01/1301072206451758-150x120.jpg" align ="left"></a>海鸥，飞翔，在穹苍，在海的上方。  看！它和群鸥一样，平举着双翅，以一个极优美的姿势，在滑翔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11790815.md#1" target="_blank">青松絮语：大房子</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11790815.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/green-house-pixabay-150x120.jpg" align ="left"></a>在一个人人都在追逐大房子、更大房子的时代，房子到底多大才够住，成了一个我们人人都该沉下心反思的哲学问题……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 11:25 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798518.md#1" target="_blank">歌词：法光照我暖心窝</a><br></h3>法光照，暖心窝，
+我给师父唱支歌。
+法轮转，驾神车，
+我随师父上天坡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 11:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795975.md#1" target="_blank">童诗：坐高铁真有趣</a><br></h3>高铁窗外的风光
 有白鹭鸶在田里翘脚
 有稻田在快乐歌唱
@@ -37,6 +41,5 @@
 雾中隐隐亭台现。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 12:17 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11788081.md#1" target="_blank">七律：人间较量</a><br></h3> 博弈财经余燹火， 抗争香港裂鸿沟。 中东挑衅移焦点， 背地支持是预谋。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 12:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11788113.md#1" target="_blank">七律：新元已启</a><br></h3> 纪元新岁已开头， 变幻风云恶未休。 簌簌有声肩雪落， 凄凄无语树禽愁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 12:14 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11790520.md#1" target="_blank">神韵行（二十九）</a><br></h3>久怀慕蔺，来朝天国，一赌盛唐气象。 龙楼凤阙五云光，问是在、人间天上？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 9:19 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zsifxm298/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zsifxm298/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007.htm">http://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
