--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11785361.md#1">蔡英文连任 韩国瑜败选 中共官媒报异调</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11786676.md#1">所属党立委选举失利 陈水扁：从此退出政坛</a><br>
 <br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798400.md#1">中华民国台湾 ：民主进程看过来</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797632.md#1">宋善：庆贺三亿五千万人退党</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796990.md#1">袁斌：有感于“伊朗央视”知名主播愤然辞职</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797542.md#1">东方觉：都是茅台惹的“祸” 醉倒贪官何其多</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794484.md#1">程晓容：中共最新反腐电视片说明什么？</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794756.md#1">夏小强：杀死闯进家中的暴徒是正当防卫吗？</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794615.md#1">陈思敏：中美签署第一阶段贸协 中共2点惨败</a><br>
-<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794324.md#1">【名家专栏】教师须慎重处理有争议的问题</a><br>
 <br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
