--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11778295.md#1">伊朗导弹袭基地 美国国防部披露更多细节</a><br>
 <br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798907.md#1">王赫：2019中共政局 赶制家法 内斗诡异</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798795.md#1">【直播中】美参院审理总统弹劾案</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798641.md#1">大陆用电减少 央企预测经济增速5年降至4%</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798666.md#1">武汉新型冠状病毒新增死亡病例 网友冒险爆料</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797766.md#1">班农：川普以贸易战打垮中国共产党</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797672.md#1">郑文杰案翻版？“国难忠医”成员广州被抓</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797264.md#1">程晓容：美中签约 川普强调“要坚强”透深意</a><br>
-<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797366.md#1">越南现2宗疑似武汉肺炎病例 全球8地响警报</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797867.md#1">2019年 遭中共迫害的社会精英人士</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798702.md#1">华盛顿加大力度 促台积电在美生产芯片</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798549.md#1">原北京师范大学研究生陶渊  陷冤狱遭迫害</a><br>
