--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795369.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/2020-1-13-mh-ebao-2019-1-320x200.png">2019年 529人参与迫害法轮功遭厄运</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798787.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NQ6BP-600x400-1-320x200.jpg">【新闻看点】川普数落中共贸易不公 刘鹤尴尬</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11786063.md#1">【拍案惊奇】蔡英文连任！北京的三层误判</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11783658.md#1">【更新】蔡英文破817万票 民进党立委过半</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
@@ -12,6 +12,7 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798679.md#1">王友群：2020中国会不会传染病大爆发</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798779.md#1">夏小强：国民党的迷途困境和未来出路</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798400.md#1">中华民国台湾 ：民主进程看过来</a><br>
+<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797264.md#1">程晓容：美中签约 川普强调“要坚强”透深意</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797632.md#1">宋善：庆贺三亿五千万人退党</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796990.md#1">袁斌：有感于“伊朗央视”知名主播愤然辞职</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797542.md#1">东方觉：都是茅台惹的“祸” 醉倒贪官何其多</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796197.md#1">周晓辉：党章放床头可笑 中南海黔驴技穷</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796087.md#1">洪微：美军公开特战部署应对中共</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794220.md#1">袁斌：贫困女生与贪腐高官 朱门酒肉臭当代版</a><br>
-<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794484.md#1">程晓容：中共最新反腐电视片说明什么？</a><br>
 <br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
@@ -34,6 +34,7 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798795.md#1">【直播中】美参院审理总统弹劾案</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798641.md#1">大陆用电减少 央企预测经济增速5年降至4%</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798666.md#1">武汉新型冠状病毒新增死亡病例 网友冒险爆料</a><br>
+<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795369.md#1">2019年 529人参与迫害法轮功遭厄运</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798118.md#1">上海两会 访民到举报点投递材料 多人被抓</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798622.md#1">【十字路口】中共叫嚷武统台湾 专家解析后果</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798554.md#1">签署中美贸易协议后首发推 川普说了啥</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797851.md#1">故宫角楼餐厅6千多元年夜饭引争议 已全取消</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797766.md#1">班农：川普以贸易战打垮中国共产党</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797672.md#1">郑文杰案翻版？“国难忠医”成员广州被抓</a><br>
-<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797264.md#1">程晓容：美中签约 川普强调“要坚强”透深意</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797867.md#1">2019年 遭中共迫害的社会精英人士</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798702.md#1">华盛顿加大力度 促台积电在美生产芯片</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798549.md#1">原北京师范大学研究生陶渊  陷冤狱遭迫害</a><br>
