--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -31,7 +31,7 @@
 <br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798918.md#1">出师不利 东莞首家在港上市房企盘中跌10%</a><br>
-<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11799061.md#1">香港“一哥”首出席区议会 遭议员集体炮轰</a><br>
+<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11799061.md#1">港警“一哥”首出席区议会 遭议员集体炮轰</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798787.md#1">【新闻看点】川普数落中共贸易不公 刘鹤尴尬</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798303.md#1">陕西男子失踪21年 知情人：油企打死多人</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798732.md#1">【热点互动】第一阶段协议改变中美贸易模式</a><br>
@@ -49,7 +49,7 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798549.md#1">原北京师范大学研究生陶渊  陷冤狱遭迫害</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798460.md#1">加网络安全专家：华为参与5G建设风险极大</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798501.md#1">中美贸易协议签署 中英文版本内容这里看</a><br>
-<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795369.md#1">2019年 529人参与迫害法轮功遭厄运</a><br>
+<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795369.md#1">参与迫害法轮功 2019年529人被曝遭厄运</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798118.md#1">上海两会 访民到举报点投递材料 多人被抓</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798622.md#1">【十字路口】中共叫嚷武统台湾 专家解析后果</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798554.md#1">签署中美贸易协议后首发推 川普说了啥</a><br>
