--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11785361.md#1">蔡英文连任 韩国瑜败选 中共官媒报异调</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11786676.md#1">所属党立委选举失利 陈水扁：从此退出政坛</a><br>
 <br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799705.md#1">程晓农：美中经贸谈判的“临门一脚”与外国解读</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798996.md#1">【名家专栏】工资与战争：中俄军费被低估</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798907.md#1">王赫：2019中共政局 赶制家法 内斗诡异</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798679.md#1">王友群：2020中国会不会传染病大爆发</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797472.md#1">向真：恶徒莫侥幸 报应不迟到</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796487.md#1">吴惠林：共产末日预言</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795934.md#1">王友群：吴花燕因贫去世 赖小民一房藏2亿</a><br>
-<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796197.md#1">周晓辉：党章放床头可笑 中南海黔驴技穷</a><br>
 <br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
