--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11785361.md#1">蔡英文连任 韩国瑜败选 中共官媒报异调</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11786676.md#1">所属党立委选举失利 陈水扁：从此退出政坛</a><br>
 <br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11800085.md#1">陆言：共产党离灭亡的终点还有多远？</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799892.md#1">袁斌：吴花燕的不幸岂止于物质，更是精神上的</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799705.md#1">程晓农：美中经贸谈判的“临门一脚”与外国解读</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799285.md#1">乾元：重庆频频大火带给我们的启示</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797632.md#1">宋善：庆贺三亿五千万人退党</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796990.md#1">袁斌：有感于“伊朗央视”知名主播愤然辞职</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797542.md#1">东方觉：都是茅台惹的“祸” 醉倒贪官何其多</a><br>
-<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797472.md#1">向真：恶徒莫侥幸 报应不迟到</a><br>
 <br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
