--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11778295.md#1">伊朗导弹袭基地 美国国防部披露更多细节</a><br>
 <br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11800646.md#1">武汉肺炎致2死 香港共发现81宗疑似个案</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11800435.md#1">中共纪检系统官员向大老虎泄密 并为其抹案</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11800324.md#1">赵紫阳祭日亲友旧部拜祭 墓园现场戒备森严</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799783.md#1">贸易协议严打仿冒及盗版 淘宝拼多多受关注</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11781776.md#1">【独家】《人民日报》前副总编遭情夫之子举报</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11799146.md#1">中共签署屈辱条例？网络民间热议</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798918.md#1">出师不利 东莞首家在港上市房企盘中跌10%</a><br>
-<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11799061.md#1">港警“一哥”首出席区议会 遭议员集体炮轰</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11800628.md#1">美参院通过“印太合作法案”对抗中共霸权</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11800041.md#1">伊朗人不踩美国和以色列国旗 网民对比中国</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799968.md#1">俞晓薇：韩国和大陆法轮功学员境遇两重天</a><br>
